# trubar

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pylintrc  pyproject.toml  requirements.txt  search.html  setup.cfg  sitemap.xml  trubar.py
.github/workflows/: pylint.yml  test.yml
code/sample/: __main__.py
code/sample/farm/: pigs.py
command-line/: index.html
configuration/: index.html
docs/: command-line.md  configuration.md  extra.css  getting-started.md  index.md  localization.md  message-files.md  multilingual.md  questions.md  scenarios.md
getting-started/: index.html
localization/: index.html
message-files/: index.html
multilingual/: index.html
questions/: index.html
scenarios/: index.html
search/: search_index.json
trubar/: __init__.py  __main__.py  actions.py  config.py  jaml.py  messages.py  trubar.py  utils.py
trubar/tests/: __init__.py  test_actions.py  test_command_line.sh  test_config.py  test_jaml.py  test_main.py  test_messages.py  test_utils.py
trubar/tests/shell_tests/_config/: .trubarconfig.yaml  config-auto-import.yaml  test.sh
trubar/tests/shell_tests/_utils/: bad_structure.yaml  test.sh
trubar/tests/shell_tests/_utils/exp/: errors_structure.txt
trubar/tests/shell_tests/collect/: some_messages.yaml  test.sh
trubar/tests/shell_tests/collect/exp/: all_messages.yaml  merged_messages.yaml  rejected.yaml  removed.yaml  removed_output  removed_pattern.yaml  submodule_messages.yaml
trubar/tests/shell_tests/merge/: new_translations.jaml  test.sh  translations.yaml
trubar/tests/shell_tests/merge/exp/: errors.txt  (+4 more)
trubar/tests/shell_tests/missing/: test.sh  translations.jaml
trubar/tests/shell_tests/stat/: test.sh
trubar/tests/shell_tests/template/: test.sh  translations.jaml
trubar/tests/shell_tests/test_project/: __init__.py
trubar/tests/shell_tests/translate/: test.sh
trubar/tests/shell_tests/update-table/: new-translations.jaml  test.sh
trubar/tests/si_translations/submodule/: apples.py
trubar/tests/si_translations_half/: __init__.py
trubar/tests/si_translations_half/submodule/: apples.py
trubar/tests/test_module/: __init__.py
trubar/tests/test_module/bar_module/: __init__.py
trubar/tests/test_module/baz_module/: __init__.py  not-python.js
trubar/tests/test_module_2/: __init__.py  submodule.py
trubar/tests/test_project/: all_messages.yaml  config-no-prefix.yaml  errors.txt  errors_structure.txt  faulty_translations.yaml  missing.yaml  missing_trash.yaml  new_messages.yaml  new_translations.yaml  newly_braced.yaml  rejected.yaml  removed.yaml  removed_pattern.yaml  template.yaml  translations.yaml  translations_for_template.yaml  updated_messages.yaml  updated_messages_pattern.yaml  updated_translations.yaml  updated_translations_faulty.yaml  updated_translations_submodule.yaml
trubar/tests/test_project/submodule/: apples.py
trubar/tests/verbosity_outputs/: 1.txt
(+26 files in other folders)
