[metadata]

name = trubar
version = 0.1
author = Janez Demsar
author_email = janez.demsar@fri.uni-lj.si
description = Utility for translation of Python sources
long_description = A tool for localization of Python messages via translating source files.
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Localization
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

project_urls =
    source code = https://github.com/janezd/trubar
    bug tracker = https://github.com/janezd/trubar/issues

[options]
packages = find:
install_requires =
    libcst
    pyyaml

python_requires = >=3.8

[options.entry_points]
console_scripts =
    trubar = trubar:main
