[metadata]

name = trubar
version = 0.2
author = Janez Demsar
author_email = janez.demsar@fri.uni-lj.si
description = Utility for translation of Python sources
long_description = A tool for localization of Python messages via translating source files.
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Localization
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

project_urls =
    Documentation = https://janezd.github.io/trubar
    Source code = https://github.com/janezd/trubar
    Bug tracker = https://github.com/janezd/trubar/issues

[options]
package_dir =
    = .
packages = find:
install_requires =
    libcst
    pyyaml

python_requires = >=3.8

[options.extras_require]
docs = mkdocs

[options.entry_points]
console_scripts =
    trubar = trubar.__main__:main
